# flow-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/scripts/: deploy-container.sh  setup-ec2.sh
.github/workflows/: ci-cd.yml  deploy_beta.yml
app/: engine.py  main.py  routes.py  sample_flow.json  schemas.py  tasks.py
tests/: test_api.py  test_core.py
