[project]
name = "flow-manager"
version = "0.1.0"
description = "A flow manager system for executing tasks sequentially with conditions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.123.0",
    "uvicorn==0.38.0",
    "pydantic==2.12.5",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "httpx",  # for testing async endpoints
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
